# @(#) $Header$

AC_INIT(willow, 1.0-cvs, keturner@livejournal.com)

USER_CFLAGS="$CFLAGS"

# autoconf brokenness
if test -z "$CC"; then
	CC=cc
fi

gcc_common="-W -Wall -Wno-unused"
debug_cflags_gcc="$gcc_common -Werror -O0 -g"
prod_cflags_gcc="$gcc_common -O3"
sunpro_common="-errshort=tags -errtags -mc -xc99"
debug_cflags_sunpro="-g $sunpro_common -v -xs"
prod_cflags_sunpro="-fast $sunpro_common -xdepend=yes -xipo=2 -xalias_level=std"

AC_CONFIG_HEADER(config.h)

echo ""
echo "examining environment..."
AC_LANG_C
AC_PROG_CC

if test x${ac_compiler_gnu+no} = xyes; then
	debug_cflags=$debug_cflags_gcc
	prod_cflags=$prod_cflags_gcc
fi

AC_MSG_CHECKING(whether we are using the SunPro C compiler)
if $CC -V 2>&1 | grep "Sun C" >/dev/null; then
	AC_MSG_RESULT(yes)
	debug_cflags=$debug_cflags_sunpro
	prod_cflags=$prod_cflags_sunpro
fi

mycflags=$prod_cflags
AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug],[Compile with debug support]),
[	if test $enableval = yes; then
		AC_DEFINE([WILLOW_DEBUG], [], [Compile with debug support])
		mycflags=$debug_cflags
	fi
])

if test -z "$USER_CFLAGS"; then
	USE_CFLAGS=$mycflags
else
	USE_CFLAGS=$USER_CFLAGS
fi

echo "using CFLAGS: $USE_CFLAGS"

AC_PROG_INSTALL
AC_MAKE_INCLUDE
AC_PATH_PROG([YACC], [yacc],none)
if test x$YACC = xnone; then
	AC_MSG_ERROR([you don't have yacc])
fi

AC_PATH_PROG([LEX], [lex],none)
if test x$LEX = xnone; then
	AC_MSG_ERROR([you don't have lex])
fi

dependstyle=null

AC_CHECK_PROG(have_makedepend, makedepend, yes, no)
if test x$have_makedepend = xyes; then
	dependstyle=makedepend
fi

AC_MSG_CHECKING(if $CC supports -xM1)
cat >conftest.c <<eof
#include "conftest.h"
eof
touch conftest.h

if $CC -xM1 conftest.c >/dev/null 2>&1; then
	AC_MSG_RESULT(yes)
	dependstyle=dashM
	dashMflag=-xM1
	AC_SUBST(dashMflag)
else
	AC_MSG_RESULT(no)
fi

rm -f conftest.c conftest.h

AC_MSG_CHECKING(if $CC supports -MM)
cat >conftest.c <<eof
#include "conftest.h"
eof
touch conftest.h

if $CC -MM conftest.c >/dev/null 2>&1; then
	AC_MSG_RESULT(yes)
	dependstyle=dashM
	dashMflag=-MM
	AC_SUBST(dashMflag)
else
	AC_MSG_RESULT(no)
fi

rm -f conftest.c conftest.h

AC_SUBST(dependstyle)

echo ""
echo "looking for required C functions..."
AC_SEARCH_LIBS(socket, socket)
AC_SEARCH_LIBS(inet_addr, nsl)
AC_SEARCH_LIBS(log10, m)
AC_SEARCH_LIBS(sendfile, sendfile)
AC_CHECK_FUNC(strlcat,AC_DEFINE([HAVE_STRLCAT],,[Define this if you have strlcat()]),[AC_LIBOBJ(strlcat)])
AC_CHECK_FUNC(strlcpy,AC_DEFINE([HAVE_STRLCPY],,[Define this if you have strlcpy()]),[AC_LIBOBJ(strlcpy)])
AC_CHECK_FUNC(sendfilev,AC_DEFINE([HAVE_SENDFILE],,[Define this if you have sendfile()]))
AC_CHECK_FUNC(daemon,AC_DEFINE([HAVE_DAEMON],,[Define this if you have daemon()]),[AC_LIBOBJ(daemon)])
AC_CHECK_FUNC(setproctitle,AC_DEFINE([HAVE_SETPROCTITLE],,[Define this if you have setproctitle()]))
AC_CHECK_TYPE(socklen_t, AC_DEFINE([HAVE_SOCKLEN_T],,[Define this if you have socklen_t]),,[#include <sys/socket.h>])
AC_CHECK_HEADER([sys/queue.h],AC_DEFINE([HAVE_SYS_QUEUE_H],,[Define this if you have <sys/queue.h]))
AC_CHECK_HEADER([sys/sendfile.h],AC_DEFINE([HAVE_SYS_SENDFILE_H],,[Define this if you have <sys/sendfile.h>]))

AC_ARG_ENABLE(debug-alloc, AC_HELP_STRING([--enable-debug-alloc],[Compile with debugging memory allocator]),
[	if test $enableval = yes; then
		AC_DEFINE([WDEBUG_ALLOC], [], [Compile with debugging allocator])
	fi
])

AC_CHECK_LIB(event, event_add, [],[AC_ERROR([libevent not found])])

datadir="${datadir}/willow"
CFLAGS="$USE_CFLAGS"

AC_OUTPUT(
	mk/prog.mk 
	mk/lib.mk
	mk/vars.mk 
	mk/rules.mk 
	mk/data.mk 
	mk/subdir.mk
	mk/depend.dashM.mk 
	mk/depend.makedepend.mk 
	mk/depend.null.mk
	mk/Makefile
	Makefile 
	src/Makefile 
	src/bin/Makefile
	src/bin/willow/Makefile
	src/bin/wlogwriter/Makefile
	src/lib/Makefile
	src/lib/wnet/Makefile
	src/lib/wlog/Makefile
	errors/Makefile)
